<?xml version="1.0"?>
<package format="2">
  <name>dji_gimbal_cam</name>
  <version>1.0.0</version>
  <description>dji_gimbal_cam provides a higher level interface to interact with the dji gimbaled cameras. dji_camera provides images and camera info from the image sensor. dji_gimbal provides control for the gimbal and a behavior for tracking a 3d point in the frame of the camera.</description>

  <author email="michailk@email.sc.edu">Michail Kalaitzakis</author>
  <author email="bscain@email.sc.edu">Brennan Cain</author>

  <maintainer email="michailk@email.sc.edu">Michail Kalaitzakis</maintainer>
  <maintainer email="bscain@email.sc.edu">Brennan Cain</maintainer>

  <license>MIT</license>


  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dji_sdk</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>dji_sdk</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>camera_info_manager</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>dji_sdk</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
